src/main/resources/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-app
  labels:
    app: url-shortener
spec:
  replicas: 3  # Scale the number of pods as per your needs
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: your-docker-image:latest  # Replace with your Docker image
          ports:
            - containerPort: 8080  # Port on which the app will run inside the container
